# abyssal_watcher_v1.04_P_H_A-mil

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  VERSION.txt  WHITEPAPER.md  abyssal_watcher_dump.md  abyssal_watcher_full_project.docx  abyssal_watcher_full_project.md  adaptive_defense_profile.json  audit_checklist.md  docker-compose.yml  enhancement_log.md  penetration_report.md  policy_config.json  threat_model.md
analyzer/: ml_analyzer.rs  mod.rs  threat_cache.rs
core/: mod.rs
core/asm_module/: anti_debug.asm  anti_debug_ultra.asm
data/: anomaly_signatures.json
defense/: anti_debug.rs  mod.rs  ze_mode.rs
docker/: Dockerfile  docker-compose.yml
engine/: mod.rs  threat_detector.rs
entrypoint/: main.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.jsx
infra/: event_bus.rs  logger.rs  mod.rs  secure_kms.rs  secure_logger.rs
penetration_tests/: 01_SQL_Injection.md  02_XSS.md  03_CSFR.md  04_RCE.md  20_STUXNET_Simulation.md
penetration_tests_report/: ASM_MODULE_REPORT.md  SUMMARY.txt
src/: api.rs  logs.rs  main.rs
tests/: integration_test.rs
