
[package]
name = "abyssal_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
anyhow = "1.0"

[dev-dependencies]

# Dependencies for enhanced logging or crypto can be added here as needed

[dev-dependencies]


[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
log = "0.4"
syslog = "5"
